<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020e26"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_empty"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/empty_box">

        </ImageView>

        <TextView
            android:id="@+id/txt_no_data_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/no_device_connected"
            android:textSize="18sp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#EBEAEC"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/device_config_module_title"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/item_func"
                    android:text="@string/device_config_ble_title"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_connect_device"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#009bD1"
        android:visibility="visible">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/plus" />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="#00000000"
            android:text="Connect Device"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/aether_logo">

            </ImageView>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/img_logo"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_color_white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/wifi">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/connect_your_aether_device"
                    android:textColor="@color/white"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/make_sure_your_aether_controller_is_in_pairing_mode_with_the_wifi_indicator_flashing"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/inside_back"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/before_you_begin"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/circle_back">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:drawableLeft="@drawable/circle_back"
                            android:text="Ensure your heat pump is powered on"
                            android:textColor="#737487"
                            android:textSize="14sp">

                        </TextView>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/circle_back">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:drawableLeft="@drawable/circle_back"
                            android:text="Check that the wifi symbol on your controller is flashing"
                            android:textColor="#737487"
                            android:textSize="14sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="15dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/circle_back">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:drawableLeft="@drawable/circle_back"
                            android:text="Stay within range of both ypur wifi router and heat pump during pairing"
                            android:textColor="#737487"
                            android:textSize="14sp">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/tv_ble"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/connect_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>